phoenix-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: phoenix
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dev.phoenix.com.local
    http:
      paths:
      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: phoenix-mobile
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: phoenix-backend
            port:
              number: 80
      - path: /store
        pathType: Prefix
        backend:
          service:
            name: storage-backend
            port:
              number: 80
